{
  "version": 4,
  "terraform_version": "1.3.1",
  "serial": 99,
  "lineage": "a7b200ee-cb9b-47df-b7c4-7b06df72d93a",
  "resources": [
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/routeTables/cn-topo-azure-dojo-vnet-rt-main",
            "location": "eastus2",
            "name": "cn-topo-azure-dojo-vnet-rt-main",
            "resource_group_name": "cn-topo-group-dojo",
            "route": [
              {
                "address_prefix": "198.203.181.181/32",
                "name": "cn-topo-azure-teamsupport-access",
                "next_hop_in_ip_address": "",
                "next_hop_type": "Internet"
              }
            ],
            "subnets": [],
            "tags": {
              "CreatedBy": "Cohesive solutions team",
              "ManagedBy": "Terraform",
              "Topology": "cn-topo-azure"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.105.76.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0",
            "name": "cn-topo-azure-dojo-vnet-sn-0",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "cn-topo-group-dojo",
            "virtual_network_name": "cn-topo-azure-dojo-vnet"
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0",
            "route_table_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/routeTables/cn-topo-azure-dojo-vnet-rt-main",
            "subnet_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0"
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_route_table.subnets_private",
            "module.azure_vnet.azurerm_subnet.subnets_private",
            "module.azure_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.105.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "1af9e119-784a-4eb4-bf4f-99be0266731f",
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet",
            "location": "eastus2",
            "name": "cn-topo-azure-dojo-vnet",
            "resource_group_name": "cn-topo-group-dojo"
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vns3",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vns3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/networkInterfaces/cn-topo-azure-vns3-ni-0",
            "internal_domain_name_suffix": "dhq5sgskpc0e3p0ptg5aezttdh.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "Primary",
                "primary": true,
                "private_ip_address": "10.105.76.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/publicIPAddresses/cn-topo-azure-vns3-publicIP-0",
                "subnet_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0"
              },
              {
                "name": "Secondary",
                "primary": false,
                "private_ip_address": "10.105.76.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0"
              }
            ],
            "location": "eastus2",
            "name": "cn-topo-azure-vns3-ni-0",
            "private_ip_address": "10.105.76.4",
            "private_ip_addresses": [
              "10.105.76.4",
              "10.105.76.5"
            ],
            "resource_group_name": "cn-topo-group-dojo",
            "tags": {
              "CreatedBy": "Cohesive solutions team",
              "ManagedBy": "Terraform",
              "Topology": "cn-topo-azure"
            }
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_subnet.subnets_private",
            "module.azure_vnet.azurerm_virtual_network.main",
            "module.azure_vns3.azurerm_public_ip.vns3_public_ips"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vns3",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vns3_server_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/networkSecurityGroups/cn-topo-azure-vns3-nsg",
            "location": "eastus2",
            "name": "cn-topo-azure-vns3-nsg",
            "resource_group_name": "cn-topo-group-dojo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "198.203.181.181/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowAllAccessCidrOutbound",
                "priority": 200,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowAllVNETInbound",
                "priority": 600,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "1195-1197",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetVNS3Peering",
                "priority": 300,
                "protocol": "Udp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "1195-1197",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVNetInboundIPsecPhase2",
                "priority": 500,
                "protocol": "Udp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "4500",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "500",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVNetInboundIPsecPhase1",
                "priority": 400,
                "protocol": "Udp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "500",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSupportCidrVNS3Http",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "198.203.181.181/32",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8000",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVnetVNS3Http",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vns3",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vns3_public_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/publicIPAddresses/cn-topo-azure-vns3-publicIP-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.110.254.232",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "cn-topo-azure-vns3-publicIP-0",
            "resource_group_name": "cn-topo-group-dojo",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CreatedBy": "Cohesive solutions team",
              "ManagedBy": "Terraform",
              "Topology": "cn-topo-azure"
            }
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_subnet.subnets_private",
            "module.azure_vnet.azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vns3",
      "mode": "managed",
      "type": "azurerm_route",
      "name": "controller_support_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "198.203.181.181/32",
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/routeTables/cn-topo-azure-dojo-vnet-rt-main/routes/cn-topo-azure-teamsupport-access",
            "name": "cn-topo-azure-teamsupport-access",
            "next_hop_in_ip_address": "",
            "next_hop_type": "Internet",
            "resource_group_name": "cn-topo-group-dojo",
            "route_table_name": "cn-topo-azure-dojo-vnet-rt-main",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_route_table.subnets_private"
          ]
        }
      ]
    },
    {
      "module": "module.azure_vns3",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0",
            "network_security_group_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/networkSecurityGroups/cn-topo-azure-vns3-nsg",
            "subnet_id": "/subscriptions/af030d48-2dc2-434f-8a9d-737be02070bb/resourceGroups/cn-topo-group-dojo/providers/Microsoft.Network/virtualNetworks/cn-topo-azure-dojo-vnet/subnets/cn-topo-azure-dojo-vnet-sn-0"
          },
          "dependencies": [
            "module.azure_vnet.azurerm_resource_group.group",
            "module.azure_vnet.azurerm_subnet.subnets_private",
            "module.azure_vnet.azurerm_virtual_network.main",
            "module.azure_vns3.azurerm_network_security_group.vns3_server_nsg"
          ]
        }
      ]
    }
  ]
}